# tensorflow2.0_CustomOpTest

./: CMakeLists.txt  main.cpp  tf_test.py
reader/: custom_dataset_op.cpp  custom_dataset_op.h  dataset_utils.cpp  dataset_utils.h  deform_conv.cpp  deform_conv.cu.cc  deform_conv.h  image_threshold_op.cc  my_reader_dataset_op.cc  name_utils.cpp  name_utils.h  prefetch_autotuner.cpp  prefetch_autotuner.h  prefetch_dataset_op.cpp  prefetch_dataset_op.h  relu.cpp  relu.h  repeat_dataset_op.cpp  repeat_dataset_op.h  stats_utils.cpp  stats_utils.h  to_zeros.cc  upsample.cc  upsample.h
